fix: css globals to dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply dark bg-background text-foreground;
   }
 }
